--- a/index.html
+++ b/index.html
@@ -6,9 +6,154 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lorenzo Franzone | Bootstrap - Freelancer</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700,800,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <!--
+  ==================================================
+  HEADER
+  ==================================================
+  -->
+
+  <!-- HEADER -->
+  <div class="container-fluid header-top">
+    <div class="container">
+      <!-- Navbar -->
+      <nav class="navbar" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <!-- Hamburger -->
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Start Bootstrap</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </nav>
+    </div>
+  </div>
+
+  <!-- Jumbo -->
+  <div class="container-fluid section-color jumbo text-center">
+    <div class="container">
+      <div class="jumbo-content">
+        <p>Immagine</p>
+        <h1>Titolo</h1>
+        <div class="divider">
+          Divider
+        </div>
+        <h3>Sottotitolo</h3>
+      </div>
+    </div>
+  </div>
+
+  <!--
+  ==================================================
+  MAIN
+  ==================================================
+  -->
+
+  <!-- Portfolio -->
+  <div class="container-fluid section-white portfolio text-center">
+    <div class="container">
+      <h2>Portfolio</h2>
+      <div class="divider">
+        Divider
+      </div>
+      <div class="container-fluid">
+        <div class="col-xs-6 col-md-4">
+          <a href="#" class="thumbnail lf_thumb">
+            <p>Immagine</p>
+          </a>
+        </div>
+        <div class="col-xs-6 col-md-4">
+          <a href="#" class="thumbnail lf_thumb">
+            <p>Immagine</p>
+          </a>
+        </div>
+        <div class="col-xs-6 col-md-4">
+          <a href="#" class="thumbnail lf_thumb">
+            <p>Immagine</p>
+          </a>
+        </div>
+        <div class="col-xs-6 col-md-4">
+          <a href="#" class="thumbnail lf_thumb">
+            <p>Immagine</p>
+          </a>
+        </div>
+        <div class="col-xs-6 col-md-4">
+          <a href="#" class="thumbnail lf_thumb">
+            <p>Immagine</p>
+          </a>
+        </div>
+        <div class="col-xs-6 col-md-4">
+          <a href="#" class="thumbnail lf_thumb">
+            <p>Immagine</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- About -->
+  <div class="container-fluid section-color about text-center">
+    <div class="container">
+      <h2>Titolo</h2>
+      <div class="divider">
+        Divider
+      </div>
+      <div class="col-lg-6 debug">Lorem ipsum</div>
+      <div class="col-lg-6 debug">Lorem ipsum</div>
+      <div class="col-lg-12 debug">Button Download</div>
+    </div>
+  </div>
+
+  <!-- Contact -->
+  <div class="container-fluid section-white contact text-center">
+    <div class="container">
+      <h2>Titolo</h2>
+      <div class="divider">
+        Divider
+      </div>
+      <p>Form</p>
+    </div>
+  </div>
+
+  <!--
+  ==================================================
+  FOOTER
+  ==================================================
+  -->
+
+  <div class="container-fluid footer text-center">
+    <div class="container">
+      <div class="col-lg-4 debug">Footer Col 1</div>
+      <div class="col-lg-4 debug">Footer Col 2</div>
+      <div class="col-lg-4 debug">Footer Col 3</div>
+    </div>
+  </div>
+
+  <!-- Footer Bottom -->
+  <div class="container-fluid footer-bottom text-center">
+    <div class="container">
+      <p class="debug">Footer Bottom</p>
+    </div>
+  </div>
+
+
 
 </body>
 </html>
