--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Lorenzo Franzone | Bootstrap - Freelancer</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700,800,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,46 +18,40 @@
   ==================================================
   -->
 
-  <!-- HEADER -->
-  <div class="container-fluid header-top">
+  <!-- Header -->
+  <div class="header-top navbar-fixed-top">
     <div class="container">
-      <!-- Navbar -->
-      <nav class="navbar" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <!-- Hamburger -->
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <div class="row">
+        <div class="col-xs-6">
+          <p class="logo">Start Bootstrap</p>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </nav>
+        <div class="col-xs-6 text-right">
+          <a href="#" class="btn btn_green hidden-lg hidden-md">Menu <span class="glyphicon glyphicon-menu-hamburger"></span></a>
+          <nav class="lf_navbar visible-md visible-lg">
+            <ul class="main-menu">
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </div>
   </div>
 
   <!-- Jumbo -->
-  <div class="container-fluid section-color jumbo text-center">
+  <div class="section-color jumbo text-center">
     <div class="container">
-      <div class="jumbo-content">
-        <p>Immagine</p>
-        <h1>Titolo</h1>
-        <div class="divider">
-          Divider
+        <div class="jumbo-content">
+          <img class="avatar" src="img/avataaars.svg" alt="Avatar">
+          <h1>Start Bootstrap</h1>
+          <div class="divider">
+            <div class="lf_line"></div>
+            <i class="fas fa-star"></i>
+            <div class="lf_line"></div>
+          </div>
+          <h3>Graphic Artist - Web Designer - Illustrator</h3>
         </div>
-        <h3>Sottotitolo</h3>
-      </div>
     </div>
   </div>
 
@@ -67,57 +62,87 @@
   -->
 
   <!-- Portfolio -->
-  <div class="container-fluid section-white portfolio text-center">
+  <div class="section-white portfolio text-center">
     <div class="container">
       <h2>Portfolio</h2>
       <div class="divider">
-        Divider
+        <div class="lf_line"></div>
+        <i class="fas fa-star"></i>
+        <div class="lf_line"></div>
       </div>
-      <div class="container-fluid">
-        <div class="col-xs-6 col-md-4">
-          <a href="#" class="thumbnail lf_thumb">
-            <p>Immagine</p>
-          </a>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="work">
+            <img src="img/cabin.png" alt="Cabin">
+            <div class="layover">
+              <i class="fas fa-plus"></i>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-6 col-md-4">
-          <a href="#" class="thumbnail lf_thumb">
-            <p>Immagine</p>
-          </a>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="work">
+            <img src="img/cake.png" alt="Cake">
+            <div class="layover">
+              <i class="fas fa-plus"></i>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-6 col-md-4">
-          <a href="#" class="thumbnail lf_thumb">
-            <p>Immagine</p>
-          </a>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="work">
+            <img src="img/circus.png" alt="Circus">
+            <div class="layover">
+              <i class="fas fa-plus"></i>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-6 col-md-4">
-          <a href="#" class="thumbnail lf_thumb">
-            <p>Immagine</p>
-          </a>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="work">
+            <img src="img/game.png" alt="Game">
+            <div class="layover">
+              <i class="fas fa-plus"></i>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-6 col-md-4">
-          <a href="#" class="thumbnail lf_thumb">
-            <p>Immagine</p>
-          </a>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="work">
+            <img src="img/safe.png" alt="Safe">
+            <div class="layover">
+              <i class="fas fa-plus"></i>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-6 col-md-4">
-          <a href="#" class="thumbnail lf_thumb">
-            <p>Immagine</p>
-          </a>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="work">
+            <img src="img/submarine.png" alt="Submarine">
+            <div class="layover">
+              <i class="fas fa-plus"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
   <!-- About -->
-  <div class="container-fluid section-color about text-center">
+  <div class="section-color about text-center">
     <div class="container">
       <h2>Titolo</h2>
       <div class="divider">
-        Divider
+        <div class="lf_line"></div>
+        <i class="fas fa-star"></i>
+        <div class="lf_line"></div>
       </div>
-      <div class="col-lg-6 debug">Lorem ipsum</div>
-      <div class="col-lg-6 debug">Lorem ipsum</div>
-      <div class="col-lg-12 debug">Button Download</div>
+      <div class="row wrapper">
+        <div class="col-xs-12 col-md-6">
+          <div class="box"></div>
+        </div>
+        <div class="col-xs-12 col-md-6">
+          <div class="box"></div>
+        </div>
+        <div class="col-xs-12">
+          <div>BUTTON DOWNLOAD</div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -126,9 +151,15 @@
     <div class="container">
       <h2>Titolo</h2>
       <div class="divider">
-        Divider
+        <div class="lf_line"></div>
+        <i class="fas fa-star"></i>
+        <div class="lf_line"></div>
       </div>
-      <p>Form</p>
+      <div class="row wrapper">
+        <div class="col-xs-12">
+          <div>FORM</div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -138,18 +169,26 @@
   ==================================================
   -->
 
-  <div class="container-fluid footer text-center">
+  <div class="footer text-center">
     <div class="container">
-      <div class="col-lg-4 debug">Footer Col 1</div>
-      <div class="col-lg-4 debug">Footer Col 2</div>
-      <div class="col-lg-4 debug">Footer Col 3</div>
+      <div class="row">
+        <div class="col-sx-12 col-md-4">
+          <div class="box">Footer Top 1</div>
+        </div>
+        <div class="col-sx-12 col-md-4">
+          <div class="box">Footer Top 1</div>
+        </div>
+        <div class="col-sx-12 col-md-4">
+          <div class="box">Footer Top 1</div>
+        </div>
+      </div>
     </div>
   </div>
 
   <!-- Footer Bottom -->
-  <div class="container-fluid footer-bottom text-center">
+  <div class="footer-bottom text-center">
     <div class="container">
-      <p class="debug">Footer Bottom</p>
+      <p>Copyright &copy; Your Website 2019</p>
     </div>
   </div>
 
