--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <!-- About -->
   <div class="section-color about text-center">
     <div class="container">
-      <h2>Titolo</h2>
+      <h2>About</h2>
       <div class="divider">
         <div class="lf_line"></div>
         <i class="fas fa-star"></i>
@@ -134,13 +134,13 @@
       </div>
       <div class="row wrapper">
         <div class="col-xs-12 col-md-6">
-          <div class="box"></div>
+          <p class="text-left">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
         </div>
         <div class="col-xs-12 col-md-6">
-          <div class="box"></div>
+          <p class="text-left">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
         </div>
         <div class="col-xs-12">
-          <div>BUTTON DOWNLOAD</div>
+          <a class="btn btn-white-outline" href="#"><i class="fas fa-download"></i> Free Download!</a>
         </div>
       </div>
     </div>
@@ -149,16 +149,22 @@
   <!-- Contact -->
   <div class="container-fluid section-white contact text-center">
     <div class="container">
-      <h2>Titolo</h2>
+      <h2>Contact me</h2>
       <div class="divider">
         <div class="lf_line"></div>
         <i class="fas fa-star"></i>
         <div class="lf_line"></div>
       </div>
-      <div class="row wrapper">
-        <div class="col-xs-12">
-          <div>FORM</div>
-        </div>
+      <div class="row wrapper text-left">
+        <form role="form">
+          <div class="form-group">
+            <input type="text" class="form-control lf_input" id="exampleInputName" placeholder="Name">
+            <input type="email" class="form-control lf_input" id="exampleInputEmail1" placeholder="Email">
+            <input type="tel" class="lf_input" name="" value="" id="exampleInputTelephone" placeholder="Phone Number">
+            <textarea class="lf_input" name="message" rows="8" cols="80" placeholder="Message"></textarea>
+          </div>
+          <button type="submit" class="btn btn_green">Send</button>
+        </form>
       </div>
     </div>
   </div>
@@ -173,13 +179,22 @@
     <div class="container">
       <div class="row">
         <div class="col-sx-12 col-md-4">
-          <div class="box">Footer Top 1</div>
+          <h3>Location</h3>
+          <p>2215 John Daniel Drive<br>
+Clark, MO 65243</p>
         </div>
         <div class="col-sx-12 col-md-4">
-          <div class="box">Footer Top 1</div>
+          <h3>Around the web</h3>
+          <ul class="social_icon">
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+          </ul>
         </div>
         <div class="col-sx-12 col-md-4">
-          <div class="box">Footer Top 1</div>
+          <h3>About freelancer</h3>
+          <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
         </div>
       </div>
     </div>
